--- a/algafood-api/pom.xml
+++ b/algafood-api/pom.xml
@@ -28,6 +28,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
